objects/LLC_BI__Application__c.object
<CustomObject>
    <description>The Application object is used to capture entry details about a relationship&apos;s business (loans and deposits) with the financial institution. The object is primarily used in the nCino SBA Package.</description>
    <fields>
        <fullName>LLC_BI__Application_Completion_Date__c</fullName>
        <description>Application Completed Date is a user input field that captures the date at which an application is considered complete.</description>
        <label>Application Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Offer_Sorting_Preference__c</fullName>
        <description>The user populates this optional picklist field to save the borrower’s offer sorting preference. By default, it will include lowest rate and lowest payment.</description>
        <inlineHelpText>Use this field to save the borrower’s offer sorting preference.</inlineHelpText>
        <label>Offer Sorting Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lowest Rate</fullName>
                </value>
                <value>
                    <fullName>Lowest Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Requested_Amount__c</fullName>
        <description>The system automatically populates this field to display the borrower’s requested loan amount value at the time of their credit application. The amount displayed in this field remains static throughout the lifecycle of the loan.</description>
        <inlineHelpText>This field displays the requested amount for the loan when the borrower begins the credit application.</inlineHelpText>
        <label>Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nPortal__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account associated to the application</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nPortal__Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User submitting the application</description>
        <label>Applicant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nPortal__Artifact_Id__c</fullName>
        <description>This String holds the Id of the type of application which is getting created (i.e. Loan, Deposit, Treasury)</description>
        <inlineHelpText>This ID should match the artifact being created by the application</inlineHelpText>
        <label>Artifact Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nPortal__Business_Credit_Transaction_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this lookup field to display a business&apos; credit report transaction log generated from a business credit pull</description>
        <inlineHelpText>The system automatically populates the transaction log generated by a business credit report.</inlineHelpText>
        <label>Business Credit Transaction Log</label>
        <referenceTo>nFUSE__Transaction_Log__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nPortal__OA_Auto_Decision_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox field is automatically selected when auto decision is complete.</description>
        <label>OA Auto Decision Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nPortal__Product_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is a lookup to the product package associated to the artifact (such as a loan or deposit) being created by this application.</description>
        <label>Product Package</label>
        <referenceTo>LLC_BI__Product_Package__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nPortal__Product__c</fullName>
        <description>The ID of the Product or Product type for the online application</description>
        <label>Product</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nPortal__Session__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>--DEPRECATED-- The Session saved for the Application. This field has been moved to a junction object called Context which maps applications to Users and Sessions along with a particular Context Type name.</description>
        <label>-D Session</label>
        <referenceTo>nFORCE__Session__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nPortal__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Offers Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>Applications_View</fullName>
        <columns>NAME</columns>
        <columns>nPortal__Product__c</columns>
        <columns>nPortal__Account__c</columns>
        <columns>nPortal__Applicant__c</columns>
        <columns>LLC_BI__Application_Completion_Date__c</columns>
        <columns>nPortal__OA_Auto_Decision_Complete__c</columns>
        <columns>nPortal__Status__c</columns>
        <columns>nPortal__Product_Package__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Applications View</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Application-{00000}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>